# esp-claw

components/claw_capabilities/cap_im_platform/src/: cap_im_feishu.c  cap_im_qq.c  cap_im_tg.c  cap_im_wechat.c
components/claw_capabilities/cap_web_search/src/: cap_web_search.c
components/claw_modules/claw_core/src/llm/: claw_llm_http_transport.c
components/common/app_claw/: Kconfig
components/lua_modules/lua_module_image/: README.md
components/lua_modules/lua_module_image/test/: image_convert_cache.lua  image_resize.lua
components/lua_modules/lua_module_vision/: CMakeLists.txt  Kconfig
